--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   get: ^3.24.0
+  get_storage: ^1.4.0
   cloud_firestore: "0.14.4"
   google_maps_flutter: ^1.0.3
   geolocator: ^6.1.0
