--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,13 +7,19 @@
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="saviaapp"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"> 
+        
+         <meta-data 
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDDTfAO6lPcVJzyaFVFE5eLmgn9kAhVch8"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -22,8 +28,6 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
 
-            <meta-data android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyDDTfAO6lPcVJzyaFVFE5eLmgn9kAhVch8"/>
 
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
